# Bioinformatik

./: .gitignore  CMakeLists.txt  README.md
data/: zebrafish.fa
src/: Assembler.cpp  Assembler.h  DNA.cpp  DNA.h  Graph.h  Peptide.cpp  Peptide.h  RNA.cpp  RNA.h  Sequence.h  convert.cpp  main.cpp
test/: test_main.cpp  test_sequence.cpp
